# SpaceTimePy

./: README.md  classes.dot  classes.puml  pyproject.toml
docs/: QT_INTERFACE.md
examples/dune2/: dune2.py
performance/: main.py  performance.ipynb
performance/humaneval/: analyze_results.ipynb
src/spacetimepy/interface/gameexplorer/: livegameexplorer_qt.py
