[build-system]
requires = ["hatchling", "setuptools>=65.0", "wheel"]
build-backend = "hatchling.build"

[project]
name = "spacetimepy"
version = "1.0.0"
description = "SpaceTime Programming engine for Python"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Jean-Baptiste Döderlein" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "bytecode>=0.16.2",
    "watchdog>=6.0.0",
    "pandas>=2.3.1",
    "networkx>=3.5",
    "sqlalchemy>=2.0.0",
    "tqdm>=4.67.1"
]

[project.scripts]
web-spacetimepy = "spacetimepy.interface.web.explorer:main"
game-explorer = "spacetimepy.interface.gameexplorer.gameexplorer:main"
live-game-explorer = "spacetimepy.interface.gameexplorer.livegameexplorer:main"
live-game-explorer-qt = "spacetimepy.interface.gameexplorer.livegameexplorer_qt:main"

[tool.hatch.build.targets.wheel]
packages = ["src/spacetimepy"]
include = [
    "src/spacetimepy/codediff/download_gumtree.py",
    "src/spacetimepy/codediff/gumtree_utils.py",
] 

[tool.uv.sources]
chlorophyll = { git = "https://github.com/jbdoderlein/chlorophyll" }

[project.optional-dependencies]
# Optional groups to install only what you need. Example: `pip install .[game]`

game = [
    "pygame",
    "chlorophyll",
    "sv-ttk>=2.6.1",
    "pillow>=11.2.1",
]
game-qt = [
    "pygame",
    "chlorophyll",
    "PyQt5>=5.15.0",
    "pillow>=11.2.1",
]
visualization = [
    "matplotlib>=3.10.3",
    "seaborn>=0.13.2",
    "pillow>=11.2.1",
    "pyarrow>=20.0.0",
    "fastparquet>=2024.11.0",
    "scipy>=1.16.0",
]
web = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "flask>=2.0.0",
    "flask-cors>=4.0.0",
]
debug = [
    "debugpy>=1.8.14",
    "pydevd>=3.3.0",
]


[tool.ruff.lint]
extend-select = [
    "F",        # Pyflakes rules
    "W",        # PyCodeStyle warnings
    "E",        # PyCodeStyle errors
    "I",        # Sort imports properly
    "UP",       # Warn if certain things can changed due to newer Python versions
    "C4",       # Catch incorrect use of comprehensions, dict, list, etc
    "FA",       # Enforce from __future__ import annotations
    "ISC",      # Good use of string concatenation
    "ICN",      # Use common import conventions
    "RET",      # Good return practices
    "SIM",      # Common simplification rules
    "TID",      # Some good import practices
    "TC",       # Enforce importing certain types in a TYPE_CHECKING block
    "TD",       # Be diligent with TODO comments
]
ignore = [
    "COM812",  # missing-trailing-comma
    "CPY001",  # Missing copyright notice at top of file
    "D100",    # Missing docstring in public module
    "D104",    # Missing docstring in public package
    "D203",    # blank line required before class docstring
    "D211",    # no-blank-line-before-class
    "D213",    # multi-line-summary-second-line
    "EM101",   # raw-string-in-exception
    "FIX002",  # line-contains-todo
    "E501",    # Line too long
    "TD003",   # Missing issue link on todo
]
